[metadata]
name = observer-hooks
version = attr: observer_hooks.VERSION
author = Ryan McConnell
description = Easy, minimalist tools for function side-effects and observer pattern with weak references
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ILikesCaviar/ObserverHooks
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
[options]
package_dir =
	=src
python_requires = >=3.0
include_package_data = False
install_requires =
    ordered-set>=4.1.0
[options.packages.find]
where = src
